Add options section

--- a/index.html
+++ b/index.html
@@ -137,11 +137,27 @@
 			  <p>On front-end & UX. Trusted by 190.000 folks.</p>
 	</div>
 </div>
+</div>
+	</div>
+	<!-- / content--->
 
+	<div class="promos">
+		<div class="promo1"><h4>Accessible Front-End Components</h4>
+			<p>Reliable accessible UI components: <br>
+				:focus styles, modals,<br>
+				 date pickers, navigation, <br> 
+				 tables, buttons, SVGs.</p>
+				 <button class="more">EXPLORE MORE</button>
+		</div>
+		<div class="promo1"><h4>CSS Generators & Tools</h4>
+			<p>Useful CSS tools for animations,<br>
+				 shadows, cubic-bezier curves, <br>
+				easing gradients, filters, overlays,<br>
+				 type scales.</p>
+				 <button class="more">EXPLORE MORE</button>
+		
 		</div>
 	</div>
-
-	<!-- / content--->
 
 </body>
 </html>
